WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44457
editing/pasteboard/paste-visible-script.html is broken with --html5-treebuilder
https://bugs.webkit.org/show_bug.cgi?id=44457
Summary
editing/pasteboard/paste-visible-script.html is broken with --html5-treebuilder
Adam Barth
Reported
2010-08-23 15:00:24 PDT
editing/pasteboard/paste-visible-script.html is broken with --html5-treebuilder
Attachments
Patch
(2.52 KB, patch)
2010-08-23 15:01 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-08-23 15:01:26 PDT
Created
attachment 65164
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-08-23 16:48:46 PDT
Comment on
attachment 65164
[details]
Patch Clearing flags on attachment: 65164 Committed
r65843
: <
http://trac.webkit.org/changeset/65843
>
Eric Seidel (no email)
Comment 3
2010-08-23 16:48:52 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2010-08-23 17:29:23 PDT
http://trac.webkit.org/changeset/65843
might have broken GTK Linux 32-bit Release and Qt Linux Release The following changes are on the blame list:
http://trac.webkit.org/changeset/65843
http://trac.webkit.org/changeset/65844
http://trac.webkit.org/changeset/65845
http://trac.webkit.org/changeset/65846
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug