2010-08-23  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        editing/pasteboard/paste-visible-script.html is broken with --html5-treebuilder
        https://bugs.webkit.org/show_bug.cgi?id=44457

        Turns out there are two more checks we need for fragment scripting
        permission.  Not the most beautiful design, but it seems work.

        * html/HTMLConstructionSite.cpp:
        (WebCore::HTMLConstructionSite::insertScriptElement):
        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processEndTag):

Canonical link: https://commits.webkit.org/56622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65843 268f45cc-cd09-0410-ab3c-d52691b4dbfc