WebCore/html/HTMLConstructionSite.cpp
@@ -290,7 +290,8 @@ void HTMLConstructionSite::insertFormattingElement(AtomicHTMLToken& token)
 void HTMLConstructionSite::insertScriptElement(AtomicHTMLToken& token)
 {
     RefPtr<HTMLScriptElement> element = HTMLScriptElement::create(scriptTag, m_document, true);
-    element->setAttributeMap(token.takeAtributes(), m_fragmentScriptingPermission);
+    if (m_fragmentScriptingPermission == FragmentScriptingAllowed)
+        element->setAttributeMap(token.takeAtributes(), m_fragmentScriptingPermission);
     m_openElements.push(attachToCurrent(element.release()));
 }
 
